--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body {
     background-image: linear-gradient(to bottom, black, blue);
-    height: 100vh;
+    background-attachment: fixed;
 }
 
 #container {
@@ -29,7 +29,7 @@ body {
 #profile img {
     width: 112px;
     border-radius: 100%;
-    border: 2px solid gray;
+    border: 2px solid rgba(255, 255, 255, 0.5);
 }
 
 #profile p {
